Fix spacing in header of 480px

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -45,4 +45,5 @@
   background: transparent url(../images/heart-like.svg) center no-repeat;
   width: 21px;
   height: 18px;
+  border: none;
 }
