--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,3 +1,14 @@
 .header {
   margin-top: 45px;
 }
+
+.header__logo {
+  width: 173px;
+  height: 33px;
+  margin-bottom: 45px;
+}
+
+.header__line {
+  border: 1px solid #545454;
+  margin: 0;
+}
